--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,16 @@
 {
+	"tabWidth": 4,
 	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
+	"singleQuote": false,
+	"trailingComma": "all",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
