--- a/.github/workflows/playwright.yaml
+++ b/.github/workflows/playwright.yaml
@@ -15,7 +15,7 @@ jobs:
             - name: Install Playwright Browsers
               run: pnpm exec playwright install --with-deps
             - name: Run Playwright tests against ${{ github.event.deployment_status.target_url }}
-              run: pnpm exec test:e2e
+              run: pnpm run test:e2e
               env:
                   PUBLIC_ROOT_URL: ${{ github.event.deployment_status.target_url }}
             - uses: actions/upload-artifact@v4
