--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.42.1",
 		"@sveltejs/adapter-vercel": "^5.1.1",
+		"@sveltejs/enhanced-img": "^0.1.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
