--- a/package.json
+++ b/package.json
@@ -11,36 +11,39 @@
 		"test:unit": "vitest",
 		"test:e2e": "playwright test",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"upgrade": "ncu -ui --format group --install always"
 	},
 	"devDependencies": {
+		"@fontsource-variable/shantell-sans": "^5.0.20",
 		"@playwright/test": "^1.42.1",
 		"@sveltejs/adapter-vercel": "^5.1.1",
 		"@sveltejs/enhanced-img": "^0.1.9",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"@types/node": "^20.11.25",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"autoprefixer": "^10.4.16",
-		"daisyui": "^4.4.20",
-		"eslint": "^8.56.0",
+		"@sveltejs/kit": "^2.5.4",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@types/eslint": "^8.56.5",
+		"@types/node": "^20.11.28",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"autoprefixer": "^10.4.18",
+		"daisyui": "^4.7.3",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0-next.4",
+		"npm-check-updates": "^16.14.17",
 		"open-props": "^1.6.21",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
+		"postcss": "^8.4.35",
+		"postcss-load-config": "^5.0.3",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.2",
 		"prettier-plugin-tailwindcss": "^0.5.12",
 		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.3.6",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"svelte-check": "^3.6.7",
+		"tailwindcss": "^3.4.1",
+		"tslib": "^2.6.2",
+		"typescript": "^5.4.2",
+		"vite": "^5.1.6",
+		"vitest": "^1.4.0"
 	},
 	"type": "module",
 	"packageManager": "pnpm@8.15.4",
